update td scripts

--- a/data/db_tute/teradata_scripts/basic.ipynb
+++ b/data/db_tute/teradata_scripts/basic.ipynb
@@ -2,44 +2,65 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sqlalchemy as alc\n",
     "import pandas as pd\n",
+    "import os\n",
     "\n",
     "# add run method to engine\n",
-    "def run(self, sql):\n",
+    "def run(self: alc.engine.Engine, sql:str) -> pd.DataFrame | None:\n",
     "    with self.begin() as conn:\n",
     "        res = conn.execute(alc.text(sql))\n",
     "        if res.returns_rows:\n",
     "            return pd.DataFrame(res.all(), columns=res.keys())\n",
     "\n",
     "alc.engine.Engine.run = run\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import sqlalchemy\n",
     "\n",
-    "pw = \"adfsagf\"\n",
-    "connection_string = f\"teradatasql://demo_user:{pw}@test-l36lujzkc0420a7n.env.clearscape.teradata.com\"\n",
-    "eng = sqlalchemy.create_engine(connection_string)"
+    "connection_string = f\"teradatasql://demo_user:{os.environ['password']}@test-l36lujzkc0420a7n.env.clearscape.teradata.com\"\n",
+    "eng = alc.create_engine(connection_string)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "InfoKey",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "InfoData",
+         "rawType": "object",
+         "type": "string"
+        }
+       ],
+       "ref": "947c3cf3-77b2-4318-9c55-4bfafc25ed10",
+       "rows": [
+        [
+         "0",
+         "VERSION",
+         "17.20.03.26"
+        ]
+       ],
+       "shape": {
+        "columns": 2,
+        "rows": 1
+       }
+      },
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -67,37 +88,390 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>VERSION</td>\n",
-       "      <td>17.20.03.18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>LANGUAGE SUPPORT MODE</td>\n",
-       "      <td>Standard</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>RELEASE</td>\n",
-       "      <td>17.20.03.18</td>\n",
+       "      <td>17.20.03.26</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                 InfoKey     InfoData\n",
-       "0                VERSION  17.20.03.18\n",
-       "1  LANGUAGE SUPPORT MODE     Standard\n",
-       "2                RELEASE  17.20.03.18"
+       "   InfoKey     InfoData\n",
+       "0  VERSION  17.20.03.26"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "eng.run(\"select * from dbc.dbcinfo\")"
+    "_ = eng.run(f\"select * from dbc.dbcinfo where infokey = 'Version'\")\n",
+    "_"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "InfoKey",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "InfoData",
+         "rawType": "object",
+         "type": "string"
+        }
+       ],
+       "ref": "23dac874-8b3f-434b-9c6b-4fc917d16b0e",
+       "rows": [
+        [
+         "0",
+         "VERSION",
+         "17.20.03.26"
+        ]
+       ],
+       "shape": {
+        "columns": 2,
+        "rows": 1
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>InfoKey</th>\n",
+       "      <th>InfoData</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>VERSION</td>\n",
+       "      <td>17.20.03.26</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   InfoKey     InfoData\n",
+       "0  VERSION  17.20.03.26"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = eng.run(f\"\"\"\n",
+    "select *\n",
+    "from dbc.dbcinfo\n",
+    "where infokey = 'Version'\n",
+    "\"\"\"\n",
+    ")\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "InfoKey",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "InfoData",
+         "rawType": "object",
+         "type": "string"
+        }
+       ],
+       "ref": "0e4e398d-6be1-46db-90e0-c8e4ff60169c",
+       "rows": [
+        [
+         "0",
+         "VERSION",
+         "17.20.03.26"
+        ]
+       ],
+       "shape": {
+        "columns": 2,
+        "rows": 1
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>InfoKey</th>\n",
+       "      <th>InfoData</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>VERSION</td>\n",
+       "      <td>17.20.03.26</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   InfoKey     InfoData\n",
+       "0  VERSION  17.20.03.26"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "qry = f\"\"\"\n",
+    "select\n",
+    "    *\n",
+    "from dbc.dbcinfo\n",
+    "where infokey = 'Version'\n",
+    "\"\"\"\n",
+    "\n",
+    "df = eng.run(qry)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                 InfoKey     InfoData\n",
+      "0                VERSION  17.20.03.26\n",
+      "1                RELEASE  17.20.03.26\n",
+      "2  LANGUAGE SUPPORT MODE     Standard\n"
+     ]
+    }
+   ],
+   "source": [
+    "_ = eng.run(\"select top 5 * from dbc.dbcinfo\")\n",
+    "print(_.head().to_string())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(3)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eng.run(\"select count(*) as n from dbc.dbcinfo\").iloc[0,0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "InfoKey",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "n",
+         "rawType": "int64",
+         "type": "integer"
+        }
+       ],
+       "ref": "79437df8-3731-4ff5-8fac-393479fddf51",
+       "rows": [
+        [
+         "0",
+         "VERSION",
+         "1"
+        ]
+       ],
+       "shape": {
+        "columns": 2,
+        "rows": 1
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>InfoKey</th>\n",
+       "      <th>n</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>VERSION</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   InfoKey  n\n",
+       "0  VERSION  1"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "qry = f\"\"\"\n",
+    "select\n",
+    "    infokey,\n",
+    "    count(1) as n\n",
+    "from dbc.dbcinfo\n",
+    "where infokey = 'Version'\n",
+    "group by 1\n",
+    "order by 1\n",
+    "\"\"\"\n",
+    "\n",
+    "df = eng.run(qry)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(3)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tbl = \"tmp_tbl\"\n",
+    "\n",
+    "try:\n",
+    "    eng.run(f\"drop table {tbl}\")\n",
+    "except Exception as e:\n",
+    "    pass\n",
+    "\n",
+    "_ = eng.run(\n",
+    "f\"\"\"\n",
+    "create table {tbl} as (\n",
+    "    select *\n",
+    "    from dbc.dbcinfo\n",
+    ") with data;\n",
+    "\"\"\"\n",
+    ")\n",
+    "\n",
+    "eng.run(f\"select count(*) from {tbl}\").iloc[0, 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -123,7 +497,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
