--- a/snippets/snippets_notes.ipynb
+++ b/snippets/snippets_notes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "3691f2d0",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "id": "8e62fa6f",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "id": "40f30c48",
    "metadata": {},
    "outputs": [
@@ -41,23 +41,45 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\"$1.groupby([\\\"$2\\\", \\\"$3\\\"], dropna=False, observed=False).agg(\",\n",
-      "\"    **{\",\n",
-      "\"        \\\"n\\\": (\\\"$2\\\", \\\"size\\\"),\",\n",
-      "\"        \\\"$4_rate\\\": (\\\"$4\\\", \\\"mean\\\"),\",\n",
-      "\"    }\",\n",
-      "\")\",\n"
+      "\"tbl = \\\"$1\\\"\",\n",
+      "\"\",\n",
+      "\"try:\",\n",
+      "\"    eng.run(f\\\"drop table {tbl}\\\")\",\n",
+      "\"except Exception as e:\",\n",
+      "\"    pass\",\n",
+      "\"\",\n",
+      "\"_ = eng.run(\",\n",
+      "\"f\\\"\",\n",
+      "\"create table {tbl} as (\",\n",
+      "\"    select *\",\n",
+      "\"    from $2\",\n",
+      "\") with data;\",\n",
+      "\"\\\"\",\n",
+      "\")\",\n",
+      "\"\",\n",
+      "\"eng.run(f\\\"select count(*) from {tbl}\\\").iloc[0, 0]\",\n"
      ]
     }
    ],
    "source": [
     "func_str = \"\"\"\n",
-    "$1.groupby([\"$2\", \"$3\"], dropna=False, observed=False).agg(\n",
-    "    **{\n",
-    "        \"n\": (\"$2\", \"size\"),\n",
-    "        \"$4_rate\": (\"$4\", \"mean\"),\n",
-    "    }\n",
+    "tbl = \"$1\"\n",
+    "\n",
+    "try: \n",
+    "    eng.run(f\"drop table {tbl}\")\n",
+    "except Exception as e:\n",
+    "    pass\n",
+    "\n",
+    "_ = eng.run(\n",
+    "f\"\n",
+    "create table {tbl} as (\n",
+    "    select * \n",
+    "    from $2\n",
+    ") with data;\n",
+    "\"\n",
     ")\n",
+    "\n",
+    "eng.run(f\"select count(*) from {tbl}\").iloc[0, 0]\n",
     "\"\"\"\n",
     "\n",
     "print(reformat(func_str))"
@@ -66,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87650615",
+   "id": "894e88c9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -74,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "894e88c9",
+   "id": "93582cbb",
    "metadata": {},
    "outputs": [],
    "source": []
