--- a/data/analysis/25_sfa.ipynb
+++ b/data/analysis/25_sfa.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"../toydata/titanic.csv\")\n",
+    "df = pd.read_csv(\"titanic.csv\")\n",
     "print(f\"{df.shape}\")\n",
     "print(df.iloc[0, :].to_string())"
    ]
