--- a/data/analysis/01_dq_checks.ipynb
+++ b/data/analysis/01_dq_checks.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +209,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"../toydata/titanic.csv\")\n",
+    "df = pd.read_csv(\"titanic.csv\")\n",
     "print(f\"{df.shape}\")\n",
     "df.head(1)"
    ]
@@ -871,6 +871,36 @@
     "_ = _.replace(\"nan\", \"\").replace(\"NaN\", \"\")\n",
     "_"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### uniqueness"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"age\"].is_unique"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
