--- a/data/analysis/03_sum_stats.ipynb
+++ b/data/analysis/03_sum_stats.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"../toydata/titanic.csv\")\n",
+    "df = pd.read_csv(\"titanic.csv\")\n",
     "print(f\"{df.shape}\")\n",
     "print(df.iloc[0, :].to_string())"
    ]
