--- a/data/analysis/21_category_summary.ipynb
+++ b/data/analysis/21_category_summary.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"../toydata/titanic.csv\")\n",
+    "df = pd.read_csv(\"titanic.csv\")\n",
     "print(f\"{df.shape}\")\n",
     "print(df.iloc[0, :].to_string())"
    ]
