--- a/data/analysis/23_histogram.ipynb
+++ b/data/analysis/23_histogram.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +249,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"../toydata/titanic.csv\")\n",
+    "df = pd.read_csv(\"titanic.csv\")\n",
     "print(f\"{df.shape}\")\n",
     "df.head(1)"
    ]
