reorganize csv into csv xl in pandas notes

--- a/data/pandas_tute/csv_excel.ipynb
+++ b/data/pandas_tute/csv_excel.ipynb
@@ -309,6 +309,31 @@
    "source": [
     "print(df.to_csv(index=False).replace('\\r\\n', '\\n'))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### read complex excel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# read complex Excel file\n",
+    "# skip the first 10 rows, read the next 5 rows, and use the columns from 'B' to 'D'\n",
+    "df = pd.read_excel(\n",
+    "    r\"excel_table.xlsx\",\n",
+    "    sheet_name=\"Sheet1\",\n",
+    "    skiprows=range(1, 2),\n",
+    "    nrows=5,\n",
+    "    usecols=\"B:D\",\n",
+    ")\n",
+    "df"
+   ]
   }
  ],
  "metadata": {
