--- a/data/cleanning/time.ipynb
+++ b/data/cleanning/time.ipynb
@@ -16,111 +16,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 13,
+   "cell_type": "markdown",
    "id": "81df5f7c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
-       "columns": [
-        {
-         "name": "index",
-         "rawType": "int64",
-         "type": "integer"
-        },
-        {
-         "name": "time",
-         "rawType": "datetime64[ns]",
-         "type": "datetime"
-        },
-        {
-         "name": "other_col",
-         "rawType": "int64",
-         "type": "integer"
-        }
-       ],
-       "ref": "cbd6647d-af06-4b56-b70f-05f21f72874e",
-       "rows": [
-        [
-         "0",
-         "2000-01-01 12:00:00",
-         "5"
-        ],
-        [
-         "1",
-         "2000-05-01 01:00:00",
-         "3"
-        ],
-        [
-         "2",
-         "2000-12-01 13:00:00",
-         "6"
-        ]
-       ],
-       "shape": {
-        "columns": 2,
-        "rows": 3
-       }
-      },
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>time</th>\n",
-       "      <th>other_col</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2000-01-01 12:00:00</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2000-05-01 01:00:00</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2000-12-01 13:00:00</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                 time  other_col\n",
-       "0 2000-01-01 12:00:00          5\n",
-       "1 2000-05-01 01:00:00          3\n",
-       "2 2000-12-01 13:00:00          6"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "# datetime cleaning\n",
+    "### parse datetime data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a5e45fa1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "_ = \"\"\"\n",
     "time,other_col\n",
     "01-01-2000 12:00:00,5\n",
@@ -134,60 +43,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "88481e79",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
-       "columns": [
-        {
-         "name": "index",
-         "rawType": "int64",
-         "type": "integer"
-        },
-        {
-         "name": "eom",
-         "rawType": "datetime64[ns]",
-         "type": "datetime"
-        }
-       ],
-       "ref": "1655d395-5377-417e-a466-781fa5bd124c",
-       "rows": [
-        [
-         "0",
-         "2000-01-31 00:00:00"
-        ],
-        [
-         "1",
-         "2000-05-31 00:00:00"
-        ],
-        [
-         "2",
-         "2000-12-31 00:00:00"
-        ]
-       ],
-       "shape": {
-        "columns": 1,
-        "rows": 3
-       }
-      },
-      "text/plain": [
-       "0   2000-01-31\n",
-       "1   2000-05-31\n",
-       "2   2000-12-31\n",
-       "Name: eom, dtype: datetime64[ns]"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "# month end\n",
+    "### truncate datetime to month end\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d5331fa0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import datetime\n",
     "\n",
     "# def month_end(dt):\n",
@@ -205,6 +74,14 @@
     "\n",
     "df[\"eom\"] = df[\"time\"].apply(month_end)\n",
     "df[\"eom\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0f5cd289",
+   "metadata": {},
+   "source": [
+    "### working with timezones"
    ]
   },
   {
