add today dt to snippet

--- a/snippets/snippets_notes.ipynb
+++ b/snippets/snippets_notes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "3691f2d0",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "8e62fa6f",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "40f30c48",
    "metadata": {},
    "outputs": [
@@ -41,45 +41,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\"tbl = \\\"$1\\\"\",\n",
+      "\"import datetime\",\n",
       "\"\",\n",
-      "\"try:\",\n",
-      "\"    eng.run(f\\\"drop table {tbl}\\\")\",\n",
-      "\"except Exception as e:\",\n",
-      "\"    pass\",\n",
-      "\"\",\n",
-      "\"_ = eng.run(\",\n",
-      "\"f\\\"\",\n",
-      "\"create table {tbl} as (\",\n",
-      "\"    select *\",\n",
-      "\"    from $2\",\n",
-      "\") with data;\",\n",
-      "\"\\\"\",\n",
-      "\")\",\n",
-      "\"\",\n",
-      "\"eng.run(f\\\"select count(*) from {tbl}\\\").iloc[0, 0]\",\n"
+      "\"today_dt = datetime.datetime.now().strftime('%Y%m%d')\",\n",
+      "\"today_dt\",\n"
      ]
     }
    ],
    "source": [
     "func_str = \"\"\"\n",
-    "tbl = \"$1\"\n",
+    "import datetime\n",
     "\n",
-    "try: \n",
-    "    eng.run(f\"drop table {tbl}\")\n",
-    "except Exception as e:\n",
-    "    pass\n",
-    "\n",
-    "_ = eng.run(\n",
-    "f\"\n",
-    "create table {tbl} as (\n",
-    "    select * \n",
-    "    from $2\n",
-    ") with data;\n",
-    "\"\n",
-    ")\n",
-    "\n",
-    "eng.run(f\"select count(*) from {tbl}\").iloc[0, 0]\n",
+    "today_dt = datetime.datetime.now().strftime('%Y%m%d')\n",
+    "today_dt\n",
     "\"\"\"\n",
     "\n",
     "print(reformat(func_str))"
