add exceldfwriter class

--- a/data/analysis/90_output.ipynb
+++ b/data/analysis/90_output.ipynb
@@ -15,6 +15,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### example data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -125,7 +132,7 @@
          "type": "boolean"
         }
        ],
-       "ref": "deda6862-a9e4-4066-a63e-6abdef871b0a",
+       "ref": "09208c30-4a76-4a78-8de2-c35f84e1a540",
        "rows": [
         [
          "0",
@@ -446,7 +453,7 @@
          "type": "float"
         }
        ],
-       "ref": "045c3123-1e52-4c46-9ebb-1a4ab7fb3e1b",
+       "ref": "c4d98e87-b2f4-4274-9a58-6ce0979a7acc",
        "rows": [
         [
          "0",
@@ -660,7 +667,7 @@
          "type": "float"
         }
        ],
-       "ref": "dc0225e6-b0cc-4ae1-a39b-fa03102db622",
+       "ref": "8f50e7b5-e83a-4c79-8869-d3a2fbf25a41",
        "rows": [
         [
          "0",
@@ -763,39 +770,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# write df to a sheet top left in Excel file\n",
-    "with pd.ExcelWriter(\"output/output.xlsx\") as writer:\n",
+    "with pd.ExcelWriter(\"output/output0.xlsx\") as writer:\n",
     "    tbl.to_excel(writer, sheet_name=\"table 1\", index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# layout some dfs to a sheet in Excel file\n",
-    "sheet_name = \"table 1\"\n",
-    "cur_row = 0\n",
-    "distance_bw_tables = 2\n",
+    "import openpyxl\n",
+    "import pandas as pd\n",
+    "from loguru import logger\n",
     "\n",
-    "with pd.ExcelWriter(\"output/output.xlsx\") as writer:\n",
-    "    tbl0.to_excel(writer, sheet_name=sheet_name, index=False, startrow=cur_row+1, startcol=0)\n",
-    "    worksheet = writer.sheets[sheet_name]\n",
-    "    worksheet.cell(row=1, column=1, value=\"Table 0: Head of DataFrame\")\n",
-    "    cur_row += 1 + tbl0.shape[0]\n",
+    "class ExcelDfWriter(object):\n",
+    "    def __init__(self, writer: pd.ExcelWriter, sheet_name:str):\n",
+    "        self.writer = writer\n",
+    "        \n",
+    "        self.start_row = 1\n",
+    "        self.start_col = 1\n",
+    "        self.cur_row = self.start_row\n",
+    "        self.cur_col = self.start_col\n",
+    "        self.distance_bw_tables = 2\n",
     "\n",
-    "    tbl.to_excel(writer, sheet_name=sheet_name, index=False, startrow=cur_row + distance_bw_tables + 1, startcol=0)\n",
-    "    worksheet.cell(row=cur_row + distance_bw_tables + 1, column=1, value=\"Table 1: survived rate and n by class and sex\")\n",
-    "    cur_row += 1 + tbl.shape[0] + distance_bw_tables\n",
+    "        self.add_sheet(sheet_name)\n",
     "\n",
-    "    tbl2.to_excel(writer, sheet_name=sheet_name, index=False, startrow=cur_row + distance_bw_tables + 1, startcol=0)\n",
-    "    worksheet.cell(row=cur_row + distance_bw_tables + 1, column=1, value=\"Table 2: survived rate by class and sex\")\n",
-    "    cur_row += 1 + tbl2.shape[0] + distance_bw_tables"
+    "    def add_sheet(self, sheet_name: str):\n",
+    "        self.writer.book.create_sheet(sheet_name)\n",
+    "        self.sheet_name = sheet_name\n",
+    "        self.cur_row = self.start_row\n",
+    "        self.worksheet = self.writer.sheets[self.sheet_name]\n",
+    "\n",
+    "    def write(self, df: pd.DataFrame, title: str = None, index=False):\n",
+    "        # logger.debug(f\"{self.cur_row=}, {self.cur_col=}\")\n",
+    "        self.worksheet.cell(row=self.cur_row, column=self.cur_col, value=title if title else \"\")\n",
+    "        self.cur_row += 1\n",
+    "\n",
+    "        df.to_excel(self.writer, sheet_name=self.sheet_name, index=index, startrow=self.cur_row-1, startcol=self.cur_col-1)\n",
+    "        self.cur_row += df.shape[0] + self.distance_bw_tables\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with pd.ExcelWriter(\"output/output0.xlsx\", engine='openpyxl') as writer:\n",
+    "    edw = ExcelDfWriter(writer, sheet_name=\"MySheet\")\n",
+    "    edw.write(tbl0, title=\"Table 0: Head of DataFrame\", index=True)\n",
+    "    edw.write(tbl, title=\"Table 1: Grouped DataFrame\", index=True)\n",
+    "    edw.write(tbl2, title=\"Table 2: Pivoted DataFrame\", index=True)\n",
+    "\n",
+    "    edw.add_sheet(\"MySheet2\")\n",
+    "    edw.write(tbl0, title=\"Table 0: Head of DataFrame\", index=True)\n",
+    "    edw.write(tbl, title=\"Table 1: Grouped DataFrame\", index=True)\n",
+    "    \n"
    ]
   },
   {
