experiment on td transaction

--- a/data/db_tute/teradata_scripts/basic.ipynb
+++ b/data/db_tute/teradata_scripts/basic.ipynb
@@ -1,8 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "set up clearscape\n",
+    "\n",
+    "https://clearscape.teradata.com/dashboard"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +57,7 @@
          "type": "string"
         }
        ],
-       "ref": "947c3cf3-77b2-4318-9c55-4bfafc25ed10",
+       "ref": "8b9e7869-7e45-4520-a6d5-f5778679d79e",
        "rows": [
         [
          "0",
@@ -99,7 +108,7 @@
        "0  VERSION  17.20.03.26"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +368,7 @@
          "type": "integer"
         }
        ],
-       "ref": "79437df8-3731-4ff5-8fac-393479fddf51",
+       "ref": "a090a78d-9a6e-46ec-9e62-67580d0d4ff2",
        "rows": [
         [
          "0",
@@ -410,7 +419,7 @@
        "0  VERSION  1"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,18 +441,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "np.int64(3)"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Count(*)\n",
+      "0         3\n",
+      "Empty DataFrame\n",
+      "Columns: []\n",
+      "Index: []\n"
+     ]
     }
    ],
    "source": [
@@ -460,10 +470,22 @@
     "    select *\n",
     "    from dbc.dbcinfo\n",
     ") with data;\n",
+    "\n",
+    "\n",
     "\"\"\"\n",
     ")\n",
     "\n",
-    "eng.run(f\"select count(*) from {tbl}\").iloc[0, 0]"
+    "for qry in (f\"\"\"\n",
+    "select count(*) from {tbl};\n",
+    "\n",
+    "drop table {tbl};\n",
+    "\"\"\".split(\";\")\n",
+    "):\n",
+    "    qry = qry.strip()\n",
+    "    if qry:\n",
+    "        res = eng.run(qry)\n",
+    "        if res is not None:\n",
+    "            print(res)"
    ]
   },
   {
