extendable ts add sort after concat

--- a/data/pandas_tute/timeseries_related/extendable_ts.ipynb
+++ b/data/pandas_tute/timeseries_related/extendable_ts.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,11 @@
     "        return self.df[self.time_col].max()\n",
     "\n",
     "    def assign_or_extend(self, df):\n",
-    "        self.df = pd.concat([self.df, df]).drop_duplicates(subset=self.pkeys, keep=\"first\")\n",
+    "        self.df = (\n",
+    "            pd.concat([self.df, df], ignore_index=True)\n",
+    "            .drop_duplicates(subset=self.pkeys, keep=\"first\")\n",
+    "            .sort_values(self.time_col, ascending=False)\n",
+    "        )\n",
     "\n",
     "    def cut_off_data_less_than(self, ts):\n",
     "        if self.df.empty:\n",
