add timestamp to datetime notes

--- a/generics/datetime_tute/datetime_notes.ipynb
+++ b/generics/datetime_tute/datetime_notes.ipynb
@@ -2,24 +2,244 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "026ec326",
+   "execution_count": 2,
+   "id": "28eb92d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import datetime\n",
+    "import pytz"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a6696c3",
+   "metadata": {},
+   "source": [
+    "### time stamp now\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "3e081748",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "dt = datetime.datetime(2023, 10, 1, 12, 0)\n",
-      "dt.toordinal() = 738794\n",
-      "aprox_yrs = 2024\n",
-      "aprox_mths = 1\n",
-      "aprox_days = 4\n"
-     ]
+     "data": {
+      "text/plain": [
+       "datetime.datetime(2025, 7, 25, 21, 49, 33, 327632)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# ordinal is greg days\n",
+    "datetime.datetime.now()# uses local timezone"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "c52aa249",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime(2025, 7, 25, 21, 49, 33, 337855, tzinfo=<DstTzInfo 'Europe/London' BST+1:00:00 DST>)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datetime.datetime.now(pytz.timezone(\"europe/london\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "b7659e05",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime(2025, 7, 26, 6, 49, 33, 350562, tzinfo=<DstTzInfo 'Australia/Sydney' AEST+10:00:00 STD>)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datetime.datetime.now(pytz.timezone(\"australia/sydney\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "76296d78",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1753476573.358318"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datetime.datetime.now().timestamp()# uses local timezone"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "c7e6a40e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1753476573.367999"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datetime.datetime.now(pytz.timezone(\"europe/london\")).timestamp()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "f92bdb40",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1753476573.377477"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datetime.datetime.now(pytz.timezone(\"australia/sydney\")).timestamp()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "1a463eee",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime(2025, 7, 25, 21, 47, 40, 999163)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datetime.datetime.fromtimestamp(1753476460.999163) # local timezone"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "2ad2025e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime(2025, 7, 25, 20, 47, 40, 999163)"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datetime.datetime.fromtimestamp(1753476460.999163 - 3600)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "60c1a2e8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ddd52d1d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb2bd695",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dt\n",
+    "time.time()\n",
+    "ts = dt.timestamp()\n",
+    "ts\n",
+    "\n",
+    "dt.replace(tzinfo=pytz.timezone(\"australia/sydney\")).utcoffset()\n",
+    "dt.replace(tzinfo=pytz.timezone(\"australia/melbourne\")).utcoffset()\n",
+    "dt.astimezone(datetime.timezone.utc).timestamp()\n",
+    "datetime.datetime.fromtimestamp(ts)\n",
+    "datetime.datetime.utcfromtimestamp(ts)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "026ec326",
+   "metadata": {},
+   "source": [
+    "### ordinal\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eec1bfe1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# greg days\n",
+    "\n",
     "import datetime\n",
     "dt = datetime.datetime(2023, 10, 1, 12, 0, 0)\n",
     "print(f\"{dt = }\")\n",
@@ -33,6 +253,16 @@
     "print(f\"{aprox_mths = }\")\n",
     "aprox_days = (ord % 365) % 30\n",
     "print(f\"{aprox_days = }\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "9f00b326",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### other"
    ]
   },
   {
@@ -77,20 +307,6 @@
     "dt = dt.replace(tzinfo=datetime.timezone.utc)\n",
     "ts = dt.timestamp()\n",
     "ts\n",
-    "datetime.datetime.fromtimestamp(ts)\n",
-    "datetime.datetime.utcfromtimestamp(ts)\n",
-    "\n",
-    "print(\"\\n\" * 5)\n",
-    "\n",
-    "dt = datetime.datetime.now()\n",
-    "dt\n",
-    "time.time()\n",
-    "ts = dt.timestamp()\n",
-    "ts\n",
-    "datetime.datetime.now(pytz.timezone(\"australia/sydney\")).utcoffset()\n",
-    "dt.replace(tzinfo=pytz.timezone(\"australia/sydney\")).utcoffset()\n",
-    "dt.replace(tzinfo=pytz.timezone(\"australia/melbourne\")).utcoffset()\n",
-    "dt.astimezone(datetime.timezone.utc).timestamp()\n",
     "datetime.datetime.fromtimestamp(ts)\n",
     "datetime.datetime.utcfromtimestamp(ts)\n",
     "\n",
