--- a/generics/errors_and_exceptions/debugging_workflow.ipynb
+++ b/generics/errors_and_exceptions/debugging_workflow.ipynb
@@ -21,6 +21,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pdb; pdb.set_trace()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [
